@@ -12,8 +12,9 @@
 	to only_basic_info, to keep everything coherent.
 	(get_package_infos): Likewise.
 
-	* src/operations.cc (uninstall_package): Call to get_package_info
-	with TRUE in the only_basic_info parameter.
+	* src/operations.cc (up_confirm): Removed, and copied its code
+	into uninstall_package, as asking for the info is not needed.
+	(uninstall_package): Already explained.
 
 2008-03-05  Mario Sanchez Prada  <msanchez@maemo.org>
 
